--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.30.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "swiper": "^11.0.5"
+  },
+  "devDependencies": {
+    "sass": "^1.69.5"
   }
 }
