--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "moment": "^2.30.1",
     "next": "14.0.4",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.5"
